[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/textures/life.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/level_ui.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/roboto-32.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/textures/coin.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/skull.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/music.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/SoundsEffect.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/x.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/pause_false.png" type="Texture" id=10]
[ext_resource path="res://src/UI/settings_background.gd" type="Script" id=11]
[ext_resource path="res://assets/fonts/roboto-48.tres" type="DynamicFont" id=12]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="LevelUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 2.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 199.0
margin_bottom = 110.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_right = 179.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="Lifes" type="HBoxContainer" parent="UI/HBoxContainer"]
margin_right = 80.0
margin_bottom = 40.0
custom_constants/separation = 4

[node name="Texture" type="TextureRect" parent="UI/HBoxContainer/Lifes"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 1 )
expand = true

[node name="Value" type="Label" parent="UI/HBoxContainer/Lifes"]
margin_left = 44.0
margin_top = 1.0
margin_right = 80.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "20"

[node name="Gold" type="HBoxContainer" parent="UI/HBoxContainer"]
margin_left = 100.0
margin_right = 162.0
margin_bottom = 40.0
custom_constants/separation = 4

[node name="Texture" type="TextureRect" parent="UI/HBoxContainer/Gold"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 5 )
expand = true

[node name="Value" type="Label" parent="UI/HBoxContainer/Gold"]
margin_left = 44.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="Waves" type="HBoxContainer" parent="UI"]
margin_top = 50.0
margin_right = 179.0
margin_bottom = 90.0

[node name="Texture" type="TextureRect" parent="UI/Waves"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="Value" type="Label" parent="UI/Waves"]
margin_left = 44.0
margin_top = 1.0
margin_right = 179.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
text = "Wave 0/7"

[node name="PauseButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 90.0
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsBackground" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.721569 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="VBoxContainer" parent="SettingsBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -35.0
margin_right = 78.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sonor" type="HBoxContainer" parent="SettingsBackground/SettingsMenu"]
margin_right = 156.0
margin_bottom = 70.0

[node name="SoundsEffectButton" type="Button" parent="SettingsBackground/SettingsMenu/Sonor"]
margin_right = 76.0
margin_bottom = 70.0
icon = ExtResource( 8 )

[node name="x" type="Sprite" parent="SettingsBackground/SettingsMenu/Sonor/SoundsEffectButton"]
visible = false
position = Vector2( 60, 60 )
texture = ExtResource( 9 )

[node name="MusicButton" type="Button" parent="SettingsBackground/SettingsMenu/Sonor"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 70.0
icon = ExtResource( 7 )

[node name="x" type="Sprite" parent="SettingsBackground/SettingsMenu/Sonor/MusicButton"]
visible = false
position = Vector2( 60, 60 )
texture = ExtResource( 9 )

[node name="Lose" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Lose"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -52.5
margin_right = 116.0
margin_bottom = 52.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Lose/Menu"]
margin_right = 232.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 12 )
text = "You lost!"
align = 1

[node name="Buttons" type="HBoxContainer" parent="Lose/Menu"]
margin_top = 61.0
margin_right = 232.0
margin_bottom = 105.0

[node name="Quit" type="Button" parent="Lose/Menu/Buttons"]
margin_right = 70.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )
text = "Quit"

[node name="PlayAgain" type="Button" parent="Lose/Menu/Buttons"]
margin_left = 74.0
margin_right = 232.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )
text = "Play again"

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="gui_input" from="SettingsBackground" to="SettingsBackground" method="_on_SettingsBackground_gui_input"]
[connection signal="hide" from="SettingsBackground" to="." method="_on_SettingsBackground_hide"]
[connection signal="pressed" from="SettingsBackground/SettingsMenu/Sonor/SoundsEffectButton" to="SettingsBackground" method="_on_SoundsEffectButton_pressed"]
[connection signal="pressed" from="SettingsBackground/SettingsMenu/Sonor/MusicButton" to="SettingsBackground" method="_on_MusicButton_pressed"]
